--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 </div>
                 <div class="home-img">
                     <div class="img-box inner-shadow">
-                        <img src="img/example-of-profile-pic.png" class="outer-shadow" alt="profile-pic">
+                        <img src="img/Foto de perfil para linkedin - CV de Ezequiel.jpeg" class="outer-shadow" alt="profile-pic">
                     </div>
                 </div>
             </div>
